# ic_gts

./: .clang-format  .gitignore  README.md
class_1/: .gitignore  README.md
class_1/sndfile-example-src/: .wav_dct.cpp.swp  CMakeLists.txt  bit_stream.h  decoded.txt  decoder.cpp  decoder_lossy.cpp  encoder.cpp  encoder_lossy.cpp  ex7_stats.m  hist_create.m  test_bitstream.cpp  testbit  wav_cmp.cpp  wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h  zeros_ones.txt
class_1/sndfile-example-src/test_scripts/: plot_quantization.gp  script_exc2.sh  script_exc6.sh
class_2/: CMakeLists.txt  Makefile
class_2/graphics/: ex_4.m  ex_4_distribution.m  ex_5.m
class_2/images/: bright.ppm  brighter.ppm  darker.ppm  rotated.ppm  rotated2.ppm
class_2/include/: golomb.h  golomb_codec.h
class_2/songs/: sample01_mono_lossy  sample_lossy_o  sample_lossy_out
class_2/src/: bright_image.cpp  extract_image.cpp  golomb.cpp  golomb.h  golomb_codec.cpp  golomb_decoder.cpp  golomb_encoder.cpp  mirrored_image.cpp  negative_image.cpp  rotated_image.cpp  test_golomb.cpp
class_2/test/: test_bitStream.cpp  test_gencoder.cpp  test_golomb.cpp  test_predictor.cpp
class_3/: .gitignore  CMakeLists.txt  README.md  get_datasets.sh
class_3/images/: rotated.ppm  rotated3.ppm
class_3/include/: audio_codec.h  bit_stream.h  frame.h  golomb.h  grayscale_converter.h  greyscale_converter.h  image_codec.h  image_predictor.h  movie.h
class_3/src/: audio_codec.cpp  audio_encoder.cpp  frame.cpp  golomb.cpp  golomb_decoder.cpp  golomb_encoder.cpp  grayscale_converter.cpp  image_codec.cpp  image_decoder.cpp  image_encoder.cpp  image_predictor.cpp  movie.cpp  systemCheck.cpp  video_cmp.cpp  video_decoder.cpp  video_encoder.cpp
class_3/test/: test_frame.cpp  test_golomb.cpp  test_grayscale_converter.cpp  test_movie.cpp
